2016-06-30  Kirit Saelensminde  <kirit@felspar.com>
 * Fix an issue with newer Django nose releases not supporting old Django releases.

2016-03-07  Yothin Muangsommuk  <yothin@proteus-tech.com>
 Add instance id in response body when return ObjectDoesNotExist

2015-08-11  Nui Narongwet  <narongwet@proteus-tech.com>
 Add a lookup table from database table name to slumber model

2015-06-03  Yothin Muangsommuk  <yothin@proteus-tech.com>
 Add slumber RemoteForeignKey data_mapping in json formatting for server.

2015-05-12  Kirit Saelensminde  <kirit@felspar.com>
 Added some limited support for Django admin for the example projects.

2015-04-14  Kirit Saelensminde  <kirit@felspar.com>
 Fix a model lookup to use the correct API instead of looking in the data itself.

2015-04-10  Kirit Saelensminde  <kirit@felspar.com>
 Added Django 1.8 to the test set, but the tests are not passing.
 Added the `atomic` wrapper around the Slumber views where available.

2015-04-09  Kirit Saelensminde  <kirit@felspar.com>
 Add Django 1.7 to the test set.

2015-04-08  Kirit Saelensminde  <kirit@felspar.com>
 Fix some pylint errors about use of `type` and `isinstance`.

2015-04-02  Yothin Muangsommuk  <yothin@proteus-tech.com>
 Add Field deconstruction to support Django 1.7 migration.

2014-10-21  Kirit Saelensminde  <kirit@felspar.com>
 Fix the data_link function so that it works with instances that happen to be `None`.

2014-09-30  Kirit Saelensminde  <kirit@felspar.com>
 Add PUT and DELETE support to the instance data (normally `/data/`). This will soon deprecate the current update and delete operations.

2014-09-29  Kirit Saelensminde  <kirit@felspar.com>
 Add a new operation superclass `Operation` that does not pass along the application name or model name parameters (as they're already on the operation).

2014-05-27  Kirit Saelensminde  <kirit@felspar.com>
 Fix a problem when using the create operation on a model where the primary key is also a foreign key.
